# llm-workspace

./: .gitignore  AGENTS.md  Cargo.toml  GPU Inference in Rust.md  PKvsKernelEng.md  README.md  ROADMAP.md  diagnostic_gpu_test.sh  test_kernels.rs
cuda-oxide/: Cargo.toml
gguf/: Cargo.toml  README.md
gguf-cli/: Cargo.toml
gguf-cli/src/: main.rs
gguf/src/: error.rs  lib.rs  parser.rs  types.rs
llm-plug-in/: Cargo.toml
llm-plug-in/src/: error.rs  lib.rs  manifest.rs  protocol.rs  templates.rs
llm-runner/: Cargo.toml
llm-runner/examples/tcgen05_attention/: Cargo.toml  tcgen05_attention.ll  tcgen05_attention.ptx
llm-runner/examples/tcgen05_attention/src/: main.rs
llm-runner/examples/tcgen05_gemm/: Cargo.toml  tcgen05_gemm.ll  tcgen05_gemm.ptx
llm-runner/examples/tcgen05_gemm/src/: main.rs
llm-runner/examples/tiled_gemm/: Cargo.toml
llm-runner/examples/tiled_gemm/src/: main.rs
llm-runner/examples/wgmma_gemm/: Cargo.toml  wgmma_gemm.ll  wgmma_gemm.ptx  wgmma_wgmma.ptx
llm-runner/examples/wgmma_gemm/src/: main.rs
llm-runner/src/: cuda_runtime.rs  device.rs  device_discovery.rs  error.rs  gguf_weight_loader.rs  inference_engine.rs  lib.rs  llama.rs  model.rs  model_loader.rs  model_manager.rs  plug_in.rs  registry.rs  remote_discovery.rs  runner.rs  tokenizer.rs
llm-runner/src/kernel/: attention.rs  builder.rs  device_buf.rs  dispatch.rs  gemm.rs  kvcache.rs  memory.rs  mod.rs  tma_bridge.rs  tma_descriptor.rs
llm-runner/src/kernel/ptx/: gemm_tcgen05.ptx  gemm_wgmma.ptx  test_wgmma_matmul.py
llm-runner/src/llama/: context.rs  model.rs  sampler.rs  session.rs
llm-runner/src/transformer/: layer.rs  linear.rs  mod.rs  model.rs  rms_norm.rs  rope.rs  sampling.rs  tokenizer.rs
safetensors/: Cargo.toml
safetensors/src/: error.rs  gguf_converter.rs  gguf_model_loader.rs  lib.rs  safetensors_store.rs  schema.rs
