[package]
name = "crabjar-gguf"
publish = true
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "GGUF model weight file parser: header, tensor metadata, KV config, quantization type detection"
repository = "https://github.com/crombojambo/gguf"
readme = "README.md"
keywords = ["gguf", "llm", "model", "parser"]
categories = ["encoding", "science"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Binary I/O
byteorder = { version = "1.4.3", default-features = false, features = ["std"] }
half = { version = "2.7.1", features = ["serde"] }

[dev-dependencies]
tempfile = "3.24.0"
