[package]
name = "pesti-plug-in"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM runner plug-in protocol: weight manifest, inference request/response, runner config for external model runtime integration"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite.workspace = true
tracing.workspace = true
thiserror.workspace = true
safetensors.workspace = true
pesti-safetensors = { path = "../safetensors" }

[dev-dependencies]
tempfile.workspace = true
