[package]
name = "pesti-safetensors"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Safe model weight serialization: candle-core safetensors integration for SQLite-backed storage, zero-copy lazy loading, avoiding pickle-style code execution"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite.workspace = true
tracing.workspace = true
thiserror.workspace = true
path-absolutize.workspace = true
sha2.workspace = true
hex.workspace = true
safetensors.workspace = true
pesti-gguf = { path = "../gguf" }

[dev-dependencies]
tempfile.workspace = true
