[package]
name = "tiled_gemm"
version = "0.1.0"
edition = "2024"
authors = ["PESTI"]
license = "AGPL-3.0-or-later"

[workspace]

[dependencies]
cuda-device = { path = "../../../reference_materials/cuda-oxide/crates/cuda-device" }
cuda-host = { path = "../../../reference_materials/cuda-oxide/crates/cuda-host" }
cuda-core = { path = "../../../reference_materials/cuda-oxide/crates/cuda-core" }
half = "2"
